force-app/main/default/objects/KimbleOne__InvoiceLine__c/KimbleOne__InvoiceLine__c.object-meta.xml
<CustomObject>
    <customHelpPage>KimbleOne__Help</customHelpPage>
    <description>Line on an Invoice. May be an aggregation of several Invoice Line Items.</description>
    <label>Invoice Line</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Invoice Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>