force-app/main/default/objects/KimbleOne__InvoiceLine__c/fields/KimbleOne__Invoice__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__Invoice__c</fullName>
    <label>Invoice</label>
    <referenceTo>KimbleOne__Invoice__c</referenceTo>
    <relationshipLabel>Invoice Lines</relationshipLabel>
    <relationshipName>InvoiceLines</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>