force-app/main/default/objects/KimbleOne__InvoiceLine__c/fields/KimbleOne__LineNumber__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__LineNumber__c</fullName>
    <description>Used to order invoice detail.</description>
    <label>LineNumber</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>