force-app/main/default/objects/KimbleOne__InvoiceLine__c/fields/KimbleOne__Narrative__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__Narrative__c</fullName>
    <description>Description of items summarised on this Invoice Line.</description>
    <label>Narrative</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>