force-app/main/default/objects/KimbleOne__InvoiceLine__c/fields/KimbleOne__NetAmount__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__NetAmount__c</fullName>
    <label>Net Amount</label>
    <summarizedField>KimbleOne__InvoiceLineItem__c.KimbleOne__NetAmount__c</summarizedField>
    <summaryForeignKey>KimbleOne__InvoiceLineItem__c.KimbleOne__InvoiceLine__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>