force-app/main/default/objects/KimbleOne__InvoiceLine__c/fields/KimbleOne__NetAmountFormatted__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__NetAmountFormatted__c</fullName>
    <label>Net Amount (Formatted)</label>
    <length>20</length>
    <type>Text</type>
</CustomField>