force-app/main/default/objects/KimbleOne__InvoiceLine__c/fields/KimbleOne__PurchaseOrder__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__PurchaseOrder__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Only applies where Invoice Format allows multiple Purchase Orders on the same Invoice.</description>
    <label>Purchase Order</label>
    <referenceTo>KimbleOne__PurchaseOrder__c</referenceTo>
    <relationshipLabel>Invoice Lines</relationshipLabel>
    <relationshipName>Invoice_Lines_PurchaseOrder</relationshipName>
    <type>Lookup</type>
</CustomField>