force-app/main/default/objects/KimbleOne__InvoiceLine__c/fields/KimbleOne__TaxCode__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__TaxCode__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tax Code</label>
    <referenceTo>KimbleOne__TaxCode__c</referenceTo>
    <relationshipLabel>Invoice Lines</relationshipLabel>
    <relationshipName>InvoiceLines</relationshipName>
    <type>Lookup</type>
</CustomField>