force-app/main/default/objects/KimbleOne__InvoiceLine__c/fields/KimbleOne__TimeRevenueRateFormatted__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__TimeRevenueRateFormatted__c</fullName>
    <label>Time Revenue Rate (Formatted)</label>
    <length>20</length>
    <type>Text</type>
</CustomField>