force-app/main/default/objects/KimbleOne__InvoiceLine__c/fields/KimbleOne__WriteOffReasonDescription__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__WriteOffReasonDescription__c</fullName>
    <label>Write Off Reason Description</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>