force-app/main/default/objects/KimbleOne__InvoiceLine__c/listViews/KimbleOne__All.listView-meta.xml
<ListView>
    <fullName>KimbleOne__All</fullName>
    <columns>KimbleOne__Invoice__c</columns>
    <columns>KimbleOne__InvoiceSection__c</columns>
    <columns>KimbleOne__LineNumber__c</columns>
    <columns>NAME</columns>
    <columns>KimbleOne__Narrative__c</columns>
    <columns>KimbleOne__TimeTotalUnits__c</columns>
    <columns>KimbleOne__NetAmount__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>